@@ -28,9 +28,19 @@ setup(name='policy.acberchem',
           'Plone',
           'Products.LinguaPlone',
           'cirb.zopemonitoring',
+          'collective.anysurfer',
+          'collective.quickupload',
+          'collective.checktranslated',
+          'collective.easyslider',
+          'collective.galleriffic',
+          'collective.portlet.videoanysurfer',
+          'collective.videoanysurfer',
           'collective.stomach',
           # -*- Extra requirements: -*-
           'plonetheme.acberchem',
+          'Products.PloneFormGen',
+          'Solgema.fullcalendar',
+          'webcouturier.dropdownmenu',
       ],
       extras_require={
         'test': [
